--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -2,10 +2,6 @@ name: Build & Push Image (Reusable)
 
 on:
   workflow_call:
-    outputs:
-      image:
-        description: "Image that was built"
-        value: ${{ jobs.build_and_push.outputs.image || 'unset' }}
     inputs:
       image_tag:
         description: 'The tag to use for the Docker image'
@@ -20,8 +16,6 @@ on:
         required: false
         type: string
         default: 'Dockerfile'
-    secrets:
-      ECR_REPO: {}
 
 jobs:
   build_and_push:
@@ -47,17 +41,12 @@ jobs:
         run: |
           IMAGE_TAG=${{ inputs.image_tag }}
           echo "Building Docker image with tag $IMAGE_TAG..."
-          docker build -t ${{ secrets.ECR_REPO }}:$IMAGE_TAG -f ${{ inputs.dockerfile }} .
-          echo "Built image: ${{ secrets.ECR_REPO }}:$IMAGE_TAG"
-          echo "image=${{ secrets.ECR_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker build -t ${{ vars.ECR_REPO }}:$IMAGE_TAG -f ${{ inputs.dockerfile }} .
+          echo "Built image: ${{ vars.ECR_REPO }}:$IMAGE_TAG"
         shell: bash
-        
-      - name: Debug step output
-        run: |
-          echo "✅ Step output: ${{ steps.build.outputs.image }}"
 
       - name: Push Docker image
         run: |
           IMAGE_TAG=${{ inputs.image_tag }}
-          docker push ${{ secrets.ECR_REPO }}:$IMAGE_TAG
+          docker push ${{ vars.ECR_REPO }}:$IMAGE_TAG
         shell: bash
