--- a/.github/workflows/delete-ecr-tag.yml
+++ b/.github/workflows/delete-ecr-tag.yml
@@ -14,17 +14,26 @@ on:
     secrets:
       AWS_ACCESS_KEY_ID: {}
       AWS_SECRET_ACCESS_KEY: {}
-      ECR_REPO: {}
 
 jobs:
   delete-tag:
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
+          
       - name: Delete specified tag from ECR
         run: |
           TAG_TO_DELETE=${{ inputs.tag }}
-          echo "🧼 Deleting tag '$TAG_TO_DELETE' from ECR repo '${{ secrets.ECR_REPO }}' in region '${{ vars.AWS_REGION }}'..."
+          echo "🧼 Deleting tag '$TAG_TO_DELETE' from ECR repo '${{ vars.ECR_REPO }}' in region '${{ vars.AWS_REGION }}'..."
           
           aws ecr batch-delete-image \
             --repository-name "${{ vars.REPO_NAME }}" \
