--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -25,7 +25,7 @@ jobs:
     secrets: inherit
 
   export_vars:
-    needs: build_and_push_image
+    needs: check_if_deploy_needed
     runs-on: ubuntu-latest
     environment: development
     outputs:
