--- a/.github/workflows/release-to-staging.yml
+++ b/.github/workflows/release-to-staging.yml
@@ -6,84 +6,68 @@ on:
       - release/*
 
 jobs:
-  release:
+  build_and_test:
+    uses: ./.github/workflows/verify-dotnet.yml
+    with:
+      dotnet_version: '9.0.x'
+
+  check_if_deploy_needed:
+    needs: build_and_test
+    uses: ./.github/workflows/check-if-needs-deploy.yml
+
+  build_and_push_image:
+    needs: check_if_deploy_needed
+    if: needs.check_if_deploy_needed.outputs.deploy == 'true'
+    uses: ./.github/workflows/build-push-image.yml
+    with:
+      image_tag: release
+      environment: staging
+    secrets: inherit
+
+  export_vars:
+    needs: build_and_push_image
     runs-on: ubuntu-latest
     environment: staging
+    outputs:
+      AWS_REGION: ${{ steps.vars.outputs.AWS_REGION }}
+      QA_SQS_QUEUE_URL: ${{ steps.vars.outputs.QA_SQS_QUEUE_URL }}
+      REMARKETING_SERVICE_QUEUE_URL: ${{ steps.vars.outputs.REMARKETING_SERVICE_QUEUE_URL }}
+      QA_PROCESS_TABLE: ${{ steps.vars.outputs.QA_PROCESS_TABLE }}
+      USER_TABLE: ${{ steps.vars.outputs.USER_TABLE }}
+      MAX_NUM_PROCESSES: ${{ steps.vars.outputs.MAX_NUM_PROCESSES }}
+      IMAGE: ${{ steps.vars.outputs.IMAGE }}
+
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '9.0.x'
-
-      - name: Build and Test .NET
+      - id: vars
         run: |
-          dotnet restore
-          dotnet build
-          dotnet test
+          echo "AWS_REGION=${{ vars.AWS_REGION }}" >> $GITHUB_OUTPUT
+          echo "QA_SQS_QUEUE_URL=${{ vars.QA_SQS_QUEUE_URL }}" >> $GITHUB_OUTPUT
+          echo "REMARKETING_SERVICE_QUEUE_URL=${{ vars.REMARKETING_SERVICE_QUEUE_URL }}" >> $GITHUB_OUTPUT
+          echo "QA_PROCESS_TABLE=${{ vars.QA_PROCESS_TABLE }}" >> $GITHUB_OUTPUT
+          echo "USER_TABLE=${{ vars.USER_TABLE }}" >> $GITHUB_OUTPUT
+          echo "MAX_NUM_PROCESSES=${{ vars.MAX_NUM_PROCESSES }}" >> $GITHUB_OUTPUT
+          echo "IMAGE=${{ vars.ECR_REPO }}:release" >> $GITHUB_OUTPUT
+      
+  deploy_to_ecs:
+    needs: [export_vars, build_and_push_image]
+    uses: ./.github/workflows/deploy-ecs.yml
+    with:
+      image: ${{ needs.export_vars.outputs.IMAGE }}
+      environment: staging
+      environment_variables: |
+        AWS_REGION=${{ needs.export_vars.outputs.AWS_REGION }}
+        QA_SQS_QUEUE_URL=${{ needs.export_vars.outputs.QA_SQS_QUEUE_URL }}
+        REMARKETING_SERVICE_QUEUE_URL=${{ needs.export_vars.outputs.REMARKETING_SERVICE_QUEUE_URL }}
+        ASPNETCORE_ENVIRONMENT=Staging
+        QA_PROCESS_TABLE=${{ needs.export_vars.outputs.QA_PROCESS_TABLE }}
+        USER_TABLE=${{ needs.export_vars.outputs.USER_TABLE }}
+        MAX_NUM_PROCESSES=${{ needs.export_vars.outputs.MAX_NUM_PROCESSES }}
+    secrets: inherit
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ vars.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build & Push Image
-        id: build-image
-        run: |
-          IMAGE_TAG=release
-          docker build -t ${{ secrets.ECR_REPO }}:$IMAGE_TAG -f Dockerfile .
-          docker push ${{ secrets.ECR_REPO }}:$IMAGE_TAG
-          echo "image=${{ secrets.ECR_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
-      - name: Download and clean existing ECS task definition
-        id: fetch-task
-        run: |
-          aws ecs describe-task-definition \
-            --task-definition ${{ vars.TASK_DEFINITION }} \
-            --region ${{ vars.AWS_REGION }} \
-            --query 'taskDefinition' \
-            --output json > taskdef.json
-
-          jq 'del(
-            .taskDefinitionArn,
-            .revision,
-            .status,
-            .requiresAttributes,
-            .compatibilities,
-            .registeredAt,
-            .registeredBy
-          )' taskdef.json > taskdef-clean.json
-
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: taskdef-clean.json
-          container-name: ${{ vars.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
-          environment-variables: |
-            AWS_REGION=${{ vars.AWS_REGION }}
-            QA_SQS_QUEUE_URL=${{ vars.QA_SQS_QUEUE_URL }}
-            REMARKETING_SERVICE_QUEUE_URL=${{ vars.REMARKETING_SERVICE_QUEUE_URL }}
-            ASPNETCORE_ENVIRONMENT=Staging
-            QA_PROCESS_TABLE=${{ vars.QA_PROCESS_TABLE }}
-            USER_TABLE=${{ vars.USER_TABLE }}
-            MAX_NUM_PROCESSES=${{ vars.MAX_NUM_PROCESSES }}
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ secrets.ECS_SERVICE }}
-          cluster: ${{ secrets.ECS_CLUSTER }}
-          wait-for-service-stability: true
-
-      - name: Cleanup task definition files
-        run: rm -f taskdef.json taskdef-clean.json
+  delete_ecr_tag:
+    needs: deploy_to_ecs
+    uses: ./.github/workflows/delete-ecr-tag.yml
+    with:
+      environment: staging
+      tag: dev
+    secrets: inherit
