--- a/.github/workflows/commit-tag-bump.yml
+++ b/.github/workflows/commit-tag-bump.yml
@@ -17,6 +17,10 @@ jobs:
   tag_version:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      packages: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
