--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -6,8 +6,9 @@ on:
     branches: [main]
 
 permissions:
-  contents: read
-
+  contents: write
+  packages: write
+  
 jobs:
   analyze-commits: 
     if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/')
