--- a/.github/workflows/hotfix-release.yml
+++ b/.github/workflows/hotfix-release.yml
@@ -59,7 +59,7 @@ jobs:
     secrets: inherit
 
   export_vars:
-    needs: build_and_push_image
+    needs: [build_and_push_image, determine-new-tag]
     runs-on: ubuntu-latest
     environment: production
     outputs:
@@ -80,7 +80,7 @@ jobs:
           echo "QA_PROCESS_TABLE=${{ vars.QA_PROCESS_TABLE }}" >> $GITHUB_OUTPUT
           echo "USER_TABLE=${{ vars.USER_TABLE }}" >> $GITHUB_OUTPUT
           echo "MAX_NUM_PROCESSES=${{ vars.MAX_NUM_PROCESSES }}" >> $GITHUB_OUTPUT
-          echo "IMAGE=${{ vars.ECR_REPO }}:dev" >> $GITHUB_OUTPUT
+          echo "IMAGE=${{ vars.ECR_REPO }}:${{ needs.determine-new-tag.outputs.new_tag }}" >> $GITHUB_OUTPUT
       
   deploy_to_ecs:
     needs: [export_vars, build_and_push_image]
@@ -98,8 +98,9 @@ jobs:
         MAX_NUM_PROCESSES=${{ needs.export_vars.outputs.MAX_NUM_PROCESSES }}
     secrets: inherit
 
-    
+
   propagate-changes:
+    needs: [deploy_to_ecs]
     uses: ./.github/workflows/merge-workflow.yml
     with: 
       target_branch: develop
