--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -1,15 +1,15 @@
-name: PR Checks (.NET - main)
+name: PR Checks (.NET - to develop or main)
 
 on:
   pull_request:
-    branches: [main]
+    branches: [develop]
     types: [opened, synchronize, reopened]
 
 jobs:
   check-branch:
     uses: ./.github/workflows/validate-branch-name.yml
     with:
-      branch_regex: '^(release|hotfix)/[A-Za-z0-9-]+$'
+      branch_regex: '^(feature|bugfix)/ACTO-[0-9]{4,7}(-[A-Za-z0-9]+)+$'
 
   verify:
     needs: check-branch
