--- a/.github/workflows/release-to-staging.yml
+++ b/.github/workflows/release-to-staging.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - release/*
+  pull_request:
+    types: [closed]
+    branches:
+      - release/*
 
 jobs:
   build_and_test:
