--- a/.github/workflows/release-to-staging.yml
+++ b/.github/workflows/release-to-staging.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - id: set
         run: |
-          if [[ "${{ github.event_name }}" == "push" || ("${{ github.event_name }}" == "pull_request" && "${{ github.event.pull_request.merged }}" == "true") ]]; then
+          if [[ "${{ github.event_name}}" != "pull_request" || "${{github.event.pull_request.head.repo.full_name}}" != "${{github.event.pull_request.base.repo.full_name}}" ]]; then
             echo "✅ Workflow should run"
             echo "should_run=true" >> $GITHUB_OUTPUT
           else
